# coredump-uploader

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  upload-coredump.py
coredump_uploader/: __init__.py
docker/: Dockerfile
tests/: coredumplib.py  test_basic.py
